#1538 Modificar MS expedients per afegir arbres de processos
